--- a/src/app/common/components/rich-embed/rich-embed.html
+++ b/src/app/common/components/rich-embed/rich-embed.html
@@ -95,12 +95,17 @@
 
 <div class="m-rich-embed-preview" *ngIf="preview && type == 'preview'">
   <a class="thumbnail" *ngIf="preview.thumbnail">
-    <img src="{{preview.thumbnail}}" />
+    <img *ngIf="!cropImage" src="{{preview.thumbnail}}" />
+    <div
+      class="m-rich-embed-thumbnail-wrapper"
+      *ngIf="cropImage"
+      [ngStyle]="{ 'background-image': 'url(' + preview.thumbnail + ')' }"
+    ></div>
   </a>
   <a class="meta" [ngClass]="{ 'm-has-thumbnail': preview.thumbnail }">
     <h2 class="m-rich-embed--title mdl-card__title-text">
       {{preview.title | excerpt}}
     </h2>
-    <p>{{preview.description}}</p>
+    <p>{{preview.url | domain}}</p>
   </a>
 </div>
