--- a/src/app/modules/newsfeed/activity/modal/modal.component.html
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.html
@@ -148,17 +148,23 @@
               </m-activity__content>
 
               <!-- COMMENTS TREE -->
-              <div
-                class="m-activityModal__comments m-activityModal__comments--tree"
-                *ngIf="entity.guid"
-              >
+              <div class="m-activityModal__comments" *ngIf="entity.guid">
                 <ng-container *mIfBrowser>
                   <m-comments__entityOutlet
                     *ngIf="activityService.displayOptions.showComments"
                     [entity]="activityService.entity$ | async"
                     [canDelete]="activityService.canDelete$ | async"
+                    [fixedHeight]="false"
                     [showOnlyPoster]="false"
                     [showOnlyTree]="true"
+                    [fixedHeight]="false"
+                  >
+                  </m-comments__entityOutlet>
+                  <m-comments__entityOutlet
+                    *ngIf="activityService.displayOptions.showComments"
+                    [entity]="activityService.entity$ | async"
+                    [canDelete]="activityService.canDelete$ | async"
+                    [showOnlyPoster]="true"
                     [fixedHeight]="false"
                   >
                   </m-comments__entityOutlet>
@@ -167,7 +173,7 @@
             </div>
           </div>
           <!-- COMMENTS POSTER -->
-          <div
+          <!-- <div
             class="m-activityModal__comments m-activityModal__comments--poster"
             *ngIf="entity.guid"
           >
@@ -181,7 +187,7 @@
               >
               </m-comments__entityOutlet>
             </ng-container>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
