--- a/src/app/modules/admin/reports/reports.html
+++ b/src/app/modules/admin/reports/reports.html
@@ -125,11 +125,7 @@
             >View parent and its comment thread</a
           >
         </div>
-        <!-- ojm test? might be retired -->
-        <minds-card-comment
-          [comment]="report.entityObj"
-          class="mdl-card"
-        ></minds-card-comment>
+        <m-comment [comment]="report.entityObj" class="mdl-card"></m-comment>
       </div>
       <div *ngIf="!report.entityObj" class="m-comment-wrapper">
         <div class="m-admin-reports--comment-note">
