--- a/src/app/modules/comments/comments.component.scss
+++ b/src/app/modules/comments/comments.component.scss
@@ -1,36 +1,186 @@
-// ojm delete this file?
+.m-commentPoster {
+  width: 100%;
+}
 
-// .m-comments-composer .mdl-card__actions {
-//   margin-top: 3px;
-// }
+.m-commentPoster__wrapper {
+  position: relative;
+  margin: 10px;
+  border-radius: $m-borderRadius;
+  display: flex;
+  align-items: flex-start;
 
-//ojm remove?
-// .mdl-card__actions {
-//   a,
-//   div {
-//     @include m-theme() {
-//       color: themed($m-blue-grey-700);
-//     }
+  @include m-theme() {
+    border: 1px solid themed($m-borderColor--primary);
+  }
 
-//     &:hover {
-//       @include m-theme() {
-//         color: themed($m-blue-grey-900);
-//       }
-//     }
-//   }
-// .m-comments-composer--overflow {
-//   position: absolute;
-//   top: 0;
-//   right: 0;
-//   bottom: 0;
-//   width: 100px;
-//   height: 24px;
-//   @include m-theme() {
-//     background: linear-gradient(
-//       to right,
-//       rgba(themed($m-bgColor--primary), 0) 0%,
-//       rgba(themed($m-bgColor--primary), 1) 25%
-//     );
-//   }
-// }
-// }
+  .m-commentPoster__avatar {
+    flex-shrink: 0;
+
+    @include m-theme() {
+      background-color: themed($m-bgColor--primary);
+    }
+
+    img {
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+      margin: 6px 10px;
+    }
+  }
+
+  .m-commentPoster__form {
+    flex-grow: 2;
+    max-width: calc(100% - 130px);
+    margin-block-end: 0;
+    minds-textarea {
+      padding: 0;
+      margin: 11px 0;
+      border-radius: 0;
+      font-size: 16px;
+
+      @include m-theme() {
+        border: transparent !important;
+      }
+
+      .m-editor {
+        min-height: 1em;
+      }
+      .m-placeholder {
+        font-size: 16px;
+        line-height: 21px;
+        @include m-theme() {
+          color: themed($m-textColor--secondary);
+        }
+      }
+    }
+  }
+
+  .m-commentPoster__actions {
+    position: relative;
+    right: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+
+    > div:first-child {
+      display: flex;
+      margin: 3px 10px 0;
+    }
+    .m-dropdown--v2 {
+      margin: 0;
+    }
+
+    .m-commentPoster__postButton i,
+    .m-dropdown--v2 {
+      cursor: pointer;
+      font-size: 22px;
+      line-height: 24px;
+      transition: color 0.2s cubic-bezier(0.23, 1, 0.32, 1);
+      @include m-theme() {
+        color: themed($m-textColor--secondary);
+      }
+
+      &:hover {
+        @include m-theme() {
+          color: themed($m-textColor--primary);
+        }
+      }
+    }
+
+    .m-commentPoster__postButton {
+      margin-left: 5px;
+    }
+  }
+
+  .m-commentPoster__limit {
+    font-size: 10px;
+    margin: 10px;
+    cursor: default;
+    @include m-theme() {
+      color: themed($m-textColor--tertiary);
+    }
+  }
+
+  .m-commentPoster__limit--maxed {
+    @include m-theme() {
+      color: themed($m-red);
+    }
+  }
+
+  .m-commentPosterLimit__inputed {
+    font-weight: 600;
+  }
+
+  &.m-commentPoster__wrapper--editing {
+    margin-left: 0;
+    minds-textarea {
+      padding-left: 15px;
+    }
+  }
+
+  .post-preview .mdl-spinner {
+    margin-left: 15px;
+  }
+}
+
+// ATTACHMENTS ----------------------
+
+m-commentPoster {
+  .m-attachmentPreviewWrapper--richEmbed {
+    margin: 10px;
+  }
+}
+.m-attachmentPreviewWrapper {
+  position: relative;
+  max-width: 50%;
+
+  &.m-attachmentPreviewWrapper--richEmbed {
+    max-width: 100%;
+  }
+
+  .attachment-preview {
+    max-width: 100%;
+    cursor: pointer;
+  }
+
+  .post-preview {
+    position: relative;
+    margin: 10px;
+  }
+
+  .video-placeholder {
+    padding: 40px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    @include m-theme() {
+      background-color: themed($m-bgColor--secondary);
+    }
+
+    i {
+      font-size: 30px;
+      @include m-theme() {
+        color: themed($m-textColor--secondary);
+      }
+    }
+  }
+
+  .attachment-preview-delete {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    opacity: 0.5;
+    transition: opacity 0.2s cubic-bezier(0.23, 1, 0.32, 1);
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    i {
+      @include m-theme() {
+        color: themed($m-white-always);
+        text-shadow: 0 0 2px rgba(themed($m-black-always), 0.6);
+      }
+    }
+  }
+}
