--- a/src/app/modules/newsfeed/activity/modal/modal.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.ng.scss
@@ -476,6 +476,12 @@ $modal-padding: 20px;
               background-color: transparent;
             }
           }
+          .minds-body {
+            max-width: 100%;
+          }
+        }
+        .m-commentToolbar__buttons .m-dropdown--v2 {
+          margin-right: 0;
         }
 
         .m-comment__ribbonBtn {
@@ -487,21 +493,31 @@ $modal-padding: 20px;
       .m-activityModal__comments {
         padding: 0 $modal-padding $modal-padding;
 
-        &.m-activityModal__comments--poster {
-          padding-top: 20px;
-          @include m-theme() {
-            border-top: 1px solid themed($m-borderColor--primary);
-            box-shadow: 0px -5px 30px 0px rgba(themed($m-black-always), 0.3);
-          }
-          .m-comment--poster,
-          .m-comment--poster > * {
-            padding: 0;
-          }
-          textarea {
-            max-height: 80%;
+        .m-commentsEntityOutlet__topBar {
+          margin-top: 15px;
+          margin-left: 0;
+        }
+
+        .m-comment__ownerRow {
+          .m-commentOwnerRow__text {
+            flex-direction: column;
+            align-items: flex-start;
+
+            .m-comment__timestamp::before {
+              display: none;
+            }
           }
         }
 
+        .m-comment__avatar--smallScreens {
+          display: block !important;
+          .minds-avatar {
+            margin-left: 0;
+          }
+        }
+        .m-comment__avatar--largeScreens {
+          display: none !important;
+        }
         .m-comment__attachment {
           .mdl-card {
             @include m-theme() {
@@ -512,13 +528,6 @@ $modal-padding: 20px;
 
         [class*='m-commentsEntityOutlet__expand'] {
           display: none;
-        }
-        &.m-activityModal__comments--tree {
-          padding-top: $modal-padding;
-
-          .m-comment:first-child {
-            padding-top: 0;
-          }
         }
       }
     }
