--- a/src/app/modules/translate/translate.html
+++ b/src/app/modules/translate/translate.html
@@ -1,80 +1,33 @@
-<div [ngClass]="{'m-translate__hasNav2020': hasNav2020}">
-  <hr
-    *ngIf="(translation.translated  || translationInProgress) && hasNav2020"
-  />
-
-  <ng-container
-    [ngTemplateOutlet]="selectLanguage"
-    *ngIf="!hasNav2020"
-  ></ng-container>
+<div
+  class="m-translate__hasNav2020"
+  [ngClass]="{'m-translate__visible' : (translation.translated  || translationInProgress)}"
+>
+  <hr *ngIf="translation.translated  || translationInProgress" />
 
   <!-- TRANSLATED MESSAGE  ----------------------- -->
   <div *ngIf="translation.translated" class="m-translation-wrapper">
-    <div
-      class="message"
-      [ngClass]="{'mdl-card__supporting-text': !hasNav2020}"
-      *ngIf="translation.message"
-    >
+    <div class="message" *ngIf="translation.message">
       <span [innerHtml]="translation.message | tags"></span>
     </div>
 
-    <div
-      class="message"
-      [ngClass]="{'mdl-card__supporting-text': !hasNav2020}"
-      *ngIf="translation.description"
-    >
+    <div class="message" *ngIf="translation.description">
       <span [innerHtml]="translation.description | tags"></span>
     </div>
 
-    <div
-      class="message"
-      [ngClass]="{'mdl-card__supporting-text': !hasNav2020}"
-      *ngIf="translation.body"
-    >
+    <div class="message" *ngIf="translation.body">
       <span [innerHtml]="translation.body | tags"></span>
-    </div>
-
-    <!-- TRANSLATION IN PROGRESS (LEGACY) ----------------------- -->
-    <div
-      class="m-translation-label m-translate__translating"
-      [ngClass]="{'mdl-card__supporting-text mdl-color-text--grey-600': !hasNav2020}"
-      *ngIf="translationInProgress && !hasNav2020"
-    >
-      <div class="m-translationLabel__content">
-        <i class="material-icons m-material-icons-inline">public</i>
-        <ng-container i18n="@@TRANSLATE__TRANSLATING_LABEL"
-          >Translating</ng-container
-        ><span
-          *ngIf="translation.target"
-          i18n="@@TRANSLATE_TO_TRANSLATION_TARGET"
-        >
-          to {{ translation.target }}</span
-        >&hellip;
-      </div>
     </div>
     <!-- TRANSLATED FROM + OPTIONS ----------------------- -->
     <div
       class="m-translation-label m-translate__translatedFrom"
-      [ngClass]="{'mdl-card__supporting-text mdl-color-text--grey-600': !hasNav2020}"
       *ngIf="!translationInProgress && !open"
     >
       <div class="m-translationLabel__content">
-        <i *ngIf="!hasNav2020" class="material-icons m-material-icons-inline"
-          >public</i
-        >
         <ng-container i18n="@@TRANSLATE__TRANSLATED_LABEL"
           >Translated</ng-container
         ><span *ngIf="translation.source" i18n="Translation source">
           from {{ translation.source }}</span
         ><span> - </span>
-        <ng-container *ngIf="!hasNav2020">
-          <a
-            (click)="hideTranslation()"
-            i18n="@@TRANSLATE__HIDE_TRANSLATION_ACTION"
-            >hide translation</a
-          >
-          <span class="m-translate__optionsSeparator">|</span></ng-container
-        >
         <a
           (click)="changeDefaultLanguage()"
           i18n="@@TRANSLATE__CHANGE_LANGUAGE_ACTION"
@@ -86,30 +39,19 @@
   <!-- TRANSLATION IN PROGRESS ----------------------- -->
   <div
     class="m-translation-label m-translate__translating"
-    [ngClass]="{'mdl-card__supporting-text mdl-color-text--grey-600': !hasNav2020}"
-    *ngIf="translationInProgress && hasNav2020"
+    *ngIf="translationInProgress"
   >
     <div class="m-translationLabel__content">
       <m-loadingEllipsis></m-loadingEllipsis>
     </div>
   </div>
-  <ng-container
-    [ngTemplateOutlet]="selectLanguage"
-    *ngIf="hasNav2020"
-  ></ng-container>
+  <ng-container [ngTemplateOutlet]="selectLanguage"></ng-container>
 </div>
 
 <!-- SELECT LANGUAGE ----------------------- -->
 <ng-template #selectLanguage>
-  <div
-    *ngIf="open"
-    class="m-translation-label m-translate__selectWrapper"
-    [ngClass]="{'mdl-card__supporting-text mdl-color-text--grey-600': !hasNav2020}"
-  >
+  <div *ngIf="open" class="m-translation-label m-translate__selectWrapper">
     <div class="m-translationLabel__content">
-      <i class="material-icons m-material-icons-inline" *ngIf="!hasNav2020"
-        >public</i
-      >
       <span i18n="@@TRANSLATE__TO_LABEL" class="m-translate__selectLabel"
         >Translate to</span
       >
