Allow non-stripe onboarded users to create membership tiers #4263

--- a/src/app/modules/channels/v2/shop/memberships/edit.component.html
+++ b/src/app/modules/channels/v2/shop/memberships/edit.component.html
@@ -105,7 +105,8 @@
                 [readonly]="service.inProgress$ | async"
                 [disabled]="
                   (service.isEditing$ | async) ||
-                  !(service.canReceiveTokens$ | async)
+                  !(service.canReceiveTokens$ | async) ||
+                  !(service.canReceiveUsd$ | async)
                 "
               />
               <span class="m-form__customInput__checkbox"></span>
@@ -175,7 +176,7 @@
           ><a routerLink="/wallet/tokens/settings" target="_blank"
             >Add receiver address</a
           >
-          to receive tokens payments</span
+          and verify your uniqueness to receive tokens payments</span
         >
       </div>
     </div>
